[package]
name = "shippy"
version = "0.1.0"
authors = ["Liam Falconer <liam@lfn3.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
gitlab_api_tests = []

[dependencies]
git2 = "0.10"
reqwest = "0.9.22"
rand = "0.7.2"
regex = "1"
lazy_static = "1.4.0"
serde = "1.0.102"
serde_yaml = "0.8.11"